# creme

./: .gitignore  CMakeLists.txt  README.md  creme-sandbox.c
cmake/: creme-config.cmake  setup-exports.cmake
cmake-modules/: FindSDL2.cmake
examples/: CMakeLists.txt  README.md
examples/00-sdl2-rendering/: CMakeLists.txt  README.md
examples/00-sdl2-rendering/src/: main.c
examples/01-text-rendering/: CMakeLists.txt
examples/01-text-rendering/src/: main.c
examples/02-anchors/: CMakeLists.txt
examples/02-anchors/src/: main.c
examples/03-buttons/: CMakeLists.txt
examples/03-buttons/src/: main.c
examples/assets/: CMakeLists.txt
examples/assets/fonts/: CMakeLists.txt  README.md
examples/assets/tilesets/: CMakeLists.txt
examples/sdl2-rendering/: CMakeLists.txt
examples/sdl2-rendering/include/: state.h
examples/sdl2-rendering/src/: main.c  state.c
examples/text-rendering/: CMakeLists.txt
examples/text-rendering/src/: main.c
extras/: CMakeLists.txt
extras/font/: CMakeLists.txt
extras/font/include/: character-mapping.h  cmx-font.h  font-size.h  font.h  packed-block.h  pixels.h  unicode-block.h
extras/font/src/: font.c
extras/sdl2/: CMakeLists.txt
extras/sdl2-renderer/: CMakeLists.txt
extras/sdl2-renderer/include/: sdl2-renderer.h
extras/sdl2-renderer/src/: sdl2-renderer.c
extras/sdl2/include/: context.h  render.h  renderer.h  texture.h  window.h
extras/sdl2/src/: context.c  render.c  renderer.c  texture.c  window.c
extras/truetype/: CMakeLists.txt
extras/truetype/include/: character-mapping.h  cmx-truetype.h  font-size.h  font.h  packed-block.h  unicode-block.h
extras/truetype/src/: font-size.c  unicode-block.c
include/: area.h  circular-queue.h  color.h  rect.h  render-command.h  render-queue.h  size.h  tile.h  tileset.h  value-reduce.h  value.h
include/widget/: frame.h  label.h
src/: CMakeLists.txt  area.c  rect.c  render-command.c  tile.c  value-reduce.c  value.c
src/core/: CMakeLists.txt
src/core/include/: area.h  circular-queue.h  color.h  core-exports.h  creme-core.h  rect.h  render-command.h  render-queue.h  size.h  tile.h  tileset.h  value-reduce.h  value.h
src/core/src/: area.c  color.c  rect.c  render-command.c  render-queue.c  size.c  tile.c  value-reduce.c  value.c
src/widget/: frame.c  label.c
src/widgets/: CMakeLists.txt
src/widgets/include/: button.h  creme-widgets.h  frame.h  label.h  widgets-exports.h
src/widgets/src/: button.c  frame.c  label.c
src/x-sdl2/: CMakeLists.txt
src/x-sdl2/include/: cmx-sdl2.h  command-rendering.h  context.h  creme-x-sdl2.h  renderer.h  texture.h  window.h  x-sdl2-exports.h
src/x-sdl2/src/: command-rendering.c  context.c  renderer.c  texture.c  window.c
src/x-truetype/: CMakeLists.txt
src/x-truetype/include/: character-mapping.h  font-size.h  font.h  unicode-block.h  x-truetype-exports.h
src/x-truetype/src/: font-size.c  font.c  unicode-block.c
